--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
           <a href="mailto:mdhh.info@gmail.com" target="_blank"
             ><button>Email Me</button></a
           >
+          <a href="MD Haisam Hoque-cv.pdf" target="_blank"
+            ><button>View CV</button></a
+          >
         </div>
         <div class="clipped-photo reveal"></div>
       </header>
