--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   </a>
                   
                   <a
-                    href="https://github.com/haisam10"
+                    href="https://www.google.com/search?q=md+haisam+hoque"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><i class="fa-brands fa-google"></i>
