--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
   </head>
   <body>
+    <marquee>Big Achievement ZERO DAY PROJECT at " স তে সতেরো " Web Page</marquee>
     <section>
       <header class="main d-flex .fl-col j-cn al-cn">
         <div class="reveal">
@@ -84,7 +85,7 @@
           <h1>My <br />Projects</h1>
           <p>Check out my work and see what I can do.</p>
         </div>
-        <div class="reveal d-flex al-cn j-cn projet-area">
+        <div class="reveal d-flex al-cn j-cn projet-area" id="project">
           <div class="project-card">
             <h3>Project 1</h3>
             <a href="https://www.facebook.com/traveljoyfullyblog/" target="_blank" rel="noopener noreferrer">
@@ -194,7 +195,7 @@
                   </a>
                   
                   <a
-                    href="https://www.google.com/search?q=md+haisam+hoque"
+                    href="https://github.com/haisam10"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><i class="fa-brands fa-google"></i>
@@ -228,5 +229,7 @@
         observer.observe(el);
       });
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
   </body>
 </html>
