--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
+
   <body>
-    <marquee
-      >Big Achievement ZERO DAY PROJECT at " স তে সতেরো " Web Page</marquee
-    >
+    <div class="google_translate_element" id="google_translate_element"></div>
+    <marquee>Big Achievement ZERO DAY PROJECT at " স তে সতেরো " Web Page</marquee>
     <section>
       <header class="main d-flex .fl-col j-cn al-cn">
         <div class="reveal">
@@ -28,10 +28,10 @@
           </h1>
           <p>Ready to help with any advice</p>
           <a href="mailto:mdhh.info@gmail.com" target="_blank"
-            ><button>Email Me</button></a
+            ><button class="hero_button_fv">Fiver Profile</button></a
           >
           <a href="MD Haisam Hoque-cv.pdf" target="_blank"
-            ><button>View CV</button></a
+            ><button class="view_cv">View CV</button></a
           >
         </div>
         <div class="clipped-photo reveal"></div>
@@ -45,7 +45,7 @@
         </div>
         <div class="reveal">
           <p>
-            I'm Haisam — a web developer, video editor, and ethical hacker. I
+            I'm Haisam — a web developer, video editor and ethical hacker. I
             blend creativity with technical skill to build websites, edit
             standout videos, and secure digital spaces. Let’s bring your ideas
             to life—safely and smartly.
@@ -66,9 +66,9 @@
           <div class="reveal">
             <ul>
               <h3>Skills</h3>
-              <li>Web Development</li>
-              <li>Video Editing</li>
-              <li>Ethical Hacking</li>
+              <li><b>Web Development</b></li>
+              <li><b>Video Editing</b></li>
+              <li><b>Ethical Hacking</b></li>
             </ul>
           </div>
           <div class="reveal">
@@ -184,13 +184,17 @@
       <div class="most-used d-flex flex-wrap al-end j-ev">
         <div class="reveal d-flex al-end">
           <div class="d-flex-col" style="padding: 0px 10px">
-            <a href="https://github.com/haisam10
-            " target="_blank" rel="noopener noreferrer"><img
-              src="https://github.com/haisam10.png"
-              alt="GitHub Profile Picture"
-              style="width: 100px; border-radius: 50%"
+            <a
+              href="https://github.com/haisam10
+            "
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img
+                src="https://github.com/haisam10.png"
+                alt="GitHub Profile Picture"
+                style="width: 100px; border-radius: 50%"
             /></a>
-            
+
             <div class="git-profile-info">
               <p><b>MD Haisam Hoque</b></p>
               <p>Web Developer | Video Editor | Ethical Hacker</p>
@@ -202,7 +206,7 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   class="github-link"
-                  style="color: yellowgreen;text-transform: lowercase;"
+                  style="color: yellowgreen; text-transform: lowercase"
                   >haisam10</a
                 >
               </p>
@@ -213,7 +217,6 @@
               />
             </div>
           </div>
-
           <br /><br />
           <img
             src="https://ghchart.rshah.org/haisam10"
@@ -227,7 +230,6 @@
             "
           />
         </div>
-
         <div>
           <div class="section projects">
             <h2>🎖️ Project Highlights</h2>
@@ -276,18 +278,7 @@
             </ul>
           </div>
         </div>
-
         <div style="margin: 20px; display: flex; flex-wrap: wrap">
-          <a
-            href="https://github.com/haisam10"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img
-              src="https://github-readme-stats.vercel.app/api/top-langs/?username=haisam10&layout=compact&theme=radical"
-              alt="Top Languages"
-            />
-          </a>
 
         </div>
       </div>
@@ -305,7 +296,7 @@
               <ul class="social-links al-cn j-cn">
                 <li>
                   <span>Phone: </span
-                  ><a href="tel:+8801537161735">+880 153716 1735</a>
+                  ><a href="tel:+8801537161735">+880 15371 61735</a>
                 </li>
                 <li>
                   <span>Email: </span
@@ -319,21 +310,18 @@
                     rel="noopener noreferrer"
                     ><i class="fa-brands fa-facebook"></i>
                   </a>
-
                   <a
                     href="https://x.com/MD_Haisam_"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><i class="fa-brands fa-x-twitter"></i
                   ></a>
-
                   <a
                     href="https://www.facebook.com/md.haisam.hoque"
                     target="_blank"
                     rel="noopener noreferrer"
                     ><i class="fa-brands fa-github"></i>
                   </a>
-
                   <a
                     href="https://github.com/haisam10"
                     target="_blank"
@@ -347,7 +335,6 @@
         </div>
       </div>
     </section>
-
     <footer class="d-flex al-cn j-cn mini-footer">
       <p>© 2025 MDHH Group & Technology . All rights reserved.</p>
       <p>Designed by Haisam</p>
@@ -376,6 +363,13 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script src="script.js"></script>
   </body>
 </html>
