--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
         observer.observe(el);
       });
     </script>
+    <script src="https://raw.githubusercontent.com/haisam10/disable_screenshot/refs/heads/main/disable_screenshot.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
       integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
@@ -446,4 +447,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
