--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             at your service !
           </h1>
           <p>Ready to help with any advice</p>
-          <a href="https://www.fiverr.com/users/md_haisam_hoque/" target="_blank"
+          <a href="mailto:mdhh.info@gmail.com" target="_blank"
             ><button class="hero_button_fv">Fiver Profile</button></a
           >
           <a href="MD Haisam Hoque-cv.pdf" target="_blank"
@@ -186,11 +186,18 @@
           editing and ethical hacking.
         </p>
 
-        <div class="gallery-carousel reveal">
+        <div class="gallery-carousel scroll-container reveal">
           <div class="gallery-item">
             <img
               src="iamge/Certified Cybersecurity Educator Professional (CCEP).png"
               alt="Gallery Image 1"
+              onclick="openImage(this.src)"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="iamge/hp-life-cy.png"
+              alt="Gallery Image 4"
               onclick="openImage(this.src)"
             />
           </div>
@@ -210,28 +217,21 @@
           </div>
           <div class="gallery-item">
             <img
-              src="iamge/undp2.jpg"
-              alt="Gallery Image 4"
-              onclick="openImage(this.src)"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="iamge/undp3.jpg"
-              alt="Gallery Image 5"
-              onclick="openImage(this.src)"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="iamge/undp4.jpg"
+              src="iamge/undp5.jpg"
               alt="Gallery Image 6"
               onclick="openImage(this.src)"
             />
           </div>
           <div class="gallery-item">
             <img
-              src="iamge/undp5.jpg"
+              src="iamge/gdg1.jpg"
+              alt="Gallery Image 5"
+              onclick="openImage(this.src)"
+            />
+          </div>
+          <div class="gallery-item">
+            <img
+              src="iamge/gdg2.jpg"
               alt="Gallery Image 6"
               onclick="openImage(this.src)"
             />
@@ -424,7 +424,6 @@
         observer.observe(el);
       });
     </script>
-    <script src="https://raw.githubusercontent.com/haisam10/disable_screenshot/refs/heads/main/disable_screenshot.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
       integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
@@ -447,5 +446,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-
