--- a/index.html
+++ b/index.html
@@ -185,8 +185,15 @@
           A collection of my projects and achievements in web development, video
           editing and ethical hacking.
         </p>
-
+        
         <div class="gallery-carousel scroll-container reveal">
+          <div class="gallery-item">
+            <img
+              src="iamge/Data Analysis CERTIFICATE.png"
+              alt="Gallery Image 6"
+              onclick="openImage(this.src)"
+            />
+          </div>
           <div class="gallery-item">
             <img
               src="iamge/Certified Cybersecurity Educator Professional (CCEP).png"
@@ -446,3 +453,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
